montando um evento
